2017-03-06  Yusuke Suzuki  <utatane.tea@gmail.com>

        Null pointer crash when loading module with unresolved import also as a script file
        https://bugs.webkit.org/show_bug.cgi?id=168971

        Reviewed by Saam Barati.

        If linking throws an error, this error should be re-thrown
        when requesting the same module.

        * builtins/ModuleLoaderPrototype.js:
        (globalPrivate.newRegistryEntry):
        * runtime/JSModuleRecord.cpp:
        (JSC::JSModuleRecord::link):

2017-03-06  Daniel Ehrenberg  <littledan@igalia.com>

        Currency digits calculation in Intl.NumberFormat should call out to ICU
        https://bugs.webkit.org/show_bug.cgi?id=169182

        Reviewed by Yusuke Suzuki.

        * runtime/IntlNumberFormat.cpp:
        (JSC::computeCurrencyDigits):
        (JSC::computeCurrencySortKey): Deleted.
        (JSC::extractCurrencySortKey): Deleted.

2017-03-02  Tomas Popela  <tpopela@redhat.com>

        Incorrect RELEASE_ASSERT in JSGlobalObject::addStaticGlobals()
        https://bugs.webkit.org/show_bug.cgi?id=169034

        Reviewed by Mark Lam.

        It should not assign to offset, but compare to offset.

        * runtime/JSGlobalObject.cpp:
        (JSC::JSGlobalObject::addStaticGlobals):

2017-02-28  Saam Barati  <sbarati@apple.com>

        Arm64 disassembler prints "ars" instead of "asr"
        https://bugs.webkit.org/show_bug.cgi?id=168923

        Rubber stamped by Michael Saboff.

        * disassembler/ARM64/A64DOpcode.cpp:
        (JSC::ARM64Disassembler::A64DOpcodeBitfield::format):

2017-02-28  Oleksandr Skachkov  <gskachkov@gmail.com>

        Use of arguments in arrow function is slow
        https://bugs.webkit.org/show_bug.cgi?id=168829

        Reviewed by Saam Barati.

        Current patch improves performance access to arguments within arrow functuion
        by preventing create arguments variable within arrow function, also allow to cache 